k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: tofas-backend-service
  namespace: tofas-fen
spec:
  selector:
    app: tofas-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tofas-frontend-service
  namespace: tofas-fen
spec:
  selector:
    app: tofas-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080 # nginx container now runs unprivileged on 8080
  type: ClusterIP
